# cowchat

./: LICENSE  README.md  pyproject.toml
cowchat/: main.py
tests/: test_main.py
