[tool.poetry]
name = "cowchat"
version = "0.1.0"
description = ""
authors = ["Hans-Peter Bretz <bretzhanspeter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
python-dotenv = "^0.19.0"
cowpy = "^1.1.5"

[tool.poetry.scripts]
cowchat = "cowchat.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
